<resources>
    <string name="app_name">Location Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="please_enter_the_name">Please enter the name</string>
    <string name="password_should_be_match">Password should be match</string>
    <string name="please_enter_the_confirm_password">Please enter the confirm password</string>
    <string name="password_format_error">password should contain number,symbol and capital letter</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes\n</string>
</resources>