<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_wave_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_40"
            android:background="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_marginTop="@dimen/spacing_10"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_wave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_100"
            android:scaleType="fitXY"
            android:src="@drawable/bg_wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_wave_up" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/spacing_120"
            android:layout_height="@dimen/spacing_120"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_wave" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_5"
            android:text="@string/create_your_account"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_wave_up" />


        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_50"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_20"
            android:layout_marginEnd="@dimen/spacing_20"
            android:background="@drawable/bg_login_textview_round_corner"
            android:hint="@string/full_name"
            android:paddingStart="@dimen/spacing_10"
            android:paddingEnd="@dimen/spacing_10"
            android:textColor="@color/white"
            android:textColorHint="@color/steelGrey"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />


        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_50"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_20"
            android:layout_marginEnd="@dimen/spacing_20"
            android:background="@drawable/bg_login_textview_round_corner"
            android:hint="Mail"
            android:paddingStart="@dimen/spacing_10"
            android:paddingEnd="@dimen/spacing_10"
            android:textColor="@color/white"
            android:textColorHint="@color/steelGrey"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_user_name" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_60"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_20"
            android:layout_marginEnd="@dimen/spacing_20"
            app:hintEnabled="false"
            app:hintTextColor="@color/steelGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_mail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_50"
                android:background="@drawable/bg_login_textview_round_corner"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/spacing_10"
                android:paddingEnd="@dimen/spacing_50"
                android:textColor="@color/white"
                android:textColorHint="@color/steelGrey"
                android:textSize="@dimen/font_16" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_60"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_10"
            android:layout_marginEnd="@dimen/spacing_20"
            app:hintEnabled="false"
            app:hintTextColor="@color/steelGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_50"
                android:background="@drawable/bg_login_textview_round_corner"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/spacing_10"
                android:paddingEnd="@dimen/spacing_50"
                android:textColor="@color/white"
                android:textColorHint="@color/steelGrey"
                android:textSize="@dimen/font_16" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_40"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_30"
            android:layout_marginEnd="@dimen/spacing_20"
            android:layout_marginBottom="@dimen/spacing_20"
            android:background="@drawable/bg_login_round_corner"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_confirm_password" />

        <ImageView
            android:id="@+id/iv_wave_down"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_100"
            android:layout_marginTop="@dimen/spacing_20"
            android:scaleType="fitXY"
            android:src="@drawable/bg_wave_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up" />

        <View
            android:id="@+id/view_wave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_40"
            android:background="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_wave_down" />

        <TextView
            android:id="@+id/tv_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_40"
            android:layout_marginEnd="@dimen/spacing_20"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_wave_down" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_5"
            android:layout_marginEnd="@dimen/spacing_20"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_already_account">

            <TextView
                android:id="@+id/tv_login_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#0728DF"
                android:textSize="@dimen/font_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_2"
                android:background="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>